--- a/style.css
+++ b/style.css
@@ -1,14 +1,19 @@
+body {
+    font-family: Arial, Helvetica, sans-serif;
+   }
 
 .markup {
-    border: 0 solid #958b8b;
+    border: 0 solid #c7c6c6f6;
     border-bottom-width: 2px;
     border-top-width: 2px;
 }
 span.highlight-html {
     text-decoration: underline dotted black;
 }
-h1 {
-    color: #000000;
+
+h2 {
+    color: rgba(0, 0, 0, 0.89);
+    text-align: center;
 } 
 
 .term {
@@ -18,6 +23,6 @@ h1 {
 code {
     color: rgb(195, 57, 57);
     font-size: 15px;
-    background-color: #adadad;
+    background-color: #dbd7d7fe;
 }
 
