--- a/style.css
+++ b/style.css
@@ -1,9 +1,31 @@
-body {
+* {
+    box-sizing: border-box;
+}
+
+body, html {
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    font-weight: 500;
+    word-spacing: 4px;
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    max-width: 700px;
+    width: 100%;
+    margin: 0 auto;
+    background-color: #F5F5F5;
+    padding: 20px;
+    line-height: 1.3;
 }
 
 h1, h2{
     text-align: center;
+   }
+
+h1 {
+    margin-top: 0;
 }
 
 .section,
@@ -18,6 +40,32 @@ span.term {
 
 code {
     color: rgb(189, 70, 70);
-    font-size: 15px;
-    background-color: #ece9e9;
+    font-size: 13px;
+    background-color: #E7E7E7;
+}
+
+.content {
+    color: rgb(189, 70, 70);
+    font-size: 10px;
+    background-color: #E7E7E7;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    line-height: 1;
+}
+
+pre span {
+    color: black;
+}
+
+.item {
+    font-size: 10px;
+    font-weight: bold;
+    background-color: #E7E7E7;
+    margin-left: 5px;
+    padding: 2px 0;
+    color: #A1CAC6;
+}
+
+.tags p {
+    margin-bottom: 0;
 }
